userEntity and Tables

--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=localhost;Initial Catalog=TimedProject;User ID=sa;Password=ShastaDog123;Pooling=False;Encrypt=True;Trust Server Certificate=True;Authentication=SqlPassword;Application Name=azdata-DataContainer"
+  }
 }
